# diff-tree-view

./: CLAUDE.md  README.md  README.zh.md  pyproject.toml
docs/: testing.md
src/dff/: app.py  app.tcss  cli.py  config.py  terminal.py  theme.py
src/dff/models/: __init__.py
src/dff/vcs/: base.py  git.py  jj.py
src/dff/widgets/: __init__.py  change_tree.py  diff_panel.py  status_bar.py
src/diff_tree_view/: __main__.py  app.py  app.tcss  cli.py  config.py  terminal.py
src/diff_tree_view/models/: __init__.py  change.py
src/diff_tree_view/vcs/: __init__.py  base.py  detect.py  git.py  jj.py  watcher.py
src/diff_tree_view/widgets/: __init__.py  change_tree.py  diff_panel.py  status_bar.py
tests/: test_app.py  test_change_tree.py  test_cli.py  test_config.py  test_diff_panel.py  test_terminal.py  test_vcs_detect.py  test_vcs_git.py  test_vcs_jj.py  test_watcher.py
