[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "diff-tree-view"
version = "0.0.1"
description = "Terminal UI diff viewer for jujutsu and git"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.1",
    "textual-diff-view>=0.1.3",
    "watchfiles>=0.24.0",
    "pyperclip>=1.9.0",
    "typer>=0.17.3",
]

[project.scripts]
dff = "diff_tree_view.cli:app"

[tool.uv.build-backend]
module-name = "diff_tree_view"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest-timeout>=2.4.0",
    "ruff==0.14.3",
    "ty>=0.0.8",
]

[tool.pytest.ini_options]
timeout = 30
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: tmux-based end-to-end smoke tests (CI only)",
    "slow: tests that take more than 1 second",
]

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py314"
exclude = [
    ".venv",
    "tests/__snapshots__",
    "tests/scenarios",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["diff_tree_view"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    ".venv",
    "tests/__snapshots__",
]

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
redundant-cast = "error"
